<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name" translatable="false">FP sDraw Pro</string>
  <string name="paid" translatable="false">+</string>
  <string name="version" translatable="false">7.6 RC1</string>
  <string name="developer"><b>Developer:</b>
    \n\t   Dr. Failov
    \n<b>Help in developing:</b>
    \n\t - Polyasha00  <i>(interface tips)</i>;
    \n\t - Megabozyakorovka  <i>(testing)</i>;
    \n\t - Tatius <i>(suggestions, testing)</i>;
    \n\t - Orange197 <i>(testing, suggestions)</i>;
    \n\t - Plaxeen <i>(testing, suggestions)</i>;
    \n\t - Messer <i>(testing, suggestions)</i>;
    \n\t - DanaSemaniv <i>(testing, grammar)</i>;
    \n\t - Carol Angelo <i>(translate to Portuguese)</i>;
    \n\t - MiracleGuardian <i>(testing, grammar)</i>;
    \n\t - Ckpe4 <i>(testing, suggestions)</i>;
    \n\t - MaximSmel <i>(testing, grammar)</i>;
    \n\t - Kara <i>(testing, suggestions, inspiration)</i>;
    \n\t - NikolasBrind <i>(testing)</i>;
    \n\t - SakhNYAshA <i>(suggestions, inspiration)</i>;
    \n\t - Irsy <i>(suggestions)</i>;
    \n\t - MeryLEN <i>(grammar)</i>.
  \n</string>
  <string name="menuOpen">Open</string>
  <string name="menuSave">Save</string>
  <string name="menuInsert">Insert</string>
  <string name="menuUndo">Undo</string>
  <string name="menuRedo">Redo</string>
  <string name="menuClear">Clear</string>
  <string name="menuSettings">Settings</string>
  <string name="menuAbout">About</string>
  <string name="saveMenuCancel">Cancel</string>
  <string name="openSave">Saves</string>
  <string name="openAutosave">Autosaves</string>
  <string name="insertUnsupported">This source is not supported. Try using another gallery app.</string>
  <string name="undoEnd">There\'s nothing to undo</string>
  <string name="undoEndMaximum">Maximum number of undo\'s reached</string>
  <string name="redoEnd">Nothing to redo</string>
  <string name="instrumentBrush">Brush</string>
  <string name="instrumentEraser">Eraser</string>
  <string name="instrumentFilling">Filling</string>
  <string name="instrumentText">Text input</string>
  <string name="instrumentFigure">Figures</string>
  <string name="instrumentLine">Line</string>
  <string name="instrumentScale">Scaling</string>
  <string name="instrumentPipette">Pipette</string>
  <string name="instrumentAccurate">Accurate brush</string>
  <string name="settingsBrushcolor">Brush color</string>
  <string name="settingsBrushcolorOther">Other</string>
  <string name="settingsBackgroundcolor">Background color</string>
  <string name="settingsSwap">Swap colors</string>
  <string name="settingsBrushsize">Brush size</string>
  <string name="settingsErasersize">Eraser size</string>
  <string name="settingsGridsize">Grid size</string>
  <string name="settingsGridVertical">Vertical grid</string>
  <string name="settingsGridsizeTip">The grid helps to simulate lines like in the notebook. Here you can choose grid size. A zero value will disable the grid.</string>
  <string name="settingsBrushsizeManagement">Manage thickness of brush</string>
  <string name="settingsPressure">Pressure</string>
  <string name="settingsPressureTip">The more you press on the screen, the bolder the line is. Not all devices support this function</string>
  <string name="settingsManageMethodSize">Size</string>
  <string name="settingsManageMethodSizeTip">The bigger spot of your touch, the bolder the line is. Not all devices support this function</string>
  <string name="settingsSpeed">Speed</string>
  <string name="settingsSpeedTip">The faster you draw, the thinner the line is</string>
  <string name="settingsSpeedInverse">Speed inverse</string>
  <string name="settingsSpeedInverseTip">The faster you draw, the bolder the line is</string>
  <string name="settingsConstant">Constant</string>
  <string name="settingsConstantTip">The thickness of the line does not change</string>
  <string name="settingsProcessing">Draw processing</string>
  <string name="settingsAntialiasing">Antialiasing</string>
  <string name="settingsAntialiasingTip">Smoothes the edge of drawn lines</string>
  <string name="settingsSmoothing">Smoothing jerks</string>
  <string name="settingsSmoothingTip">If you draw quickly, line becomes broken. This function will try to smooth it a little</string>
  <string name="settingsSmoothingSensivity">Smoothing sensivity</string>
  <string name="settingsSmoothingSensivityTip">Determines, how accurate to draw your actions.
    \n(10) - the smoothest line, can be not very accurate;
    \n(100) - the most accurate line, but can be not very smooth;
    \n(30) - default value.
  </string>
  <string name="settingsAddWatermark">Add \"sDraw\" watermark to pictures</string>
  <string name="settingsAddWatermarkTip">Almost invisible \"sDraw\" mark will appear at the bottom right corner of picture</string>
  <string name="settingsInterface">Interface</string>
  <string name="settingsInterfaceTip">Configuring user interface</string>
  <string name="settingsShowInstrumentsSelector">Show instrument selector</string>
  <string name="settingsShowColorsSelector">Show color selector</string>
  <string name="settingsShowInstrumentsSelectorTip">Allows to change instrument by clicking button on painting</string>
  <string name="settingsShowColorsSelectorTip">Display the circle with the brush color selection.
    Palette can be moved, the placement of the colors is adapted to the new location.
    Long click on the palette opens the color picker.
    Long press on color changes the background color
  </string>
  <string name="settingsShowOnScreenMenuButton">Show on-screen menu button</string>
  <string name="settingsShowOnScreenMenuButtonTip">On-screen menu button is provided for devices which doesn\'t have hardware menu button. Disable this option, if your device has this button</string>
  <string name="settingsStatusBar">Status Bar</string>
  <string name="settingsStatusBarTip">Show status bar at the top of the screen (clock, alert icons). This setting will be applied after restart</string>
  <string name="settingsMenuStrip">Menu strip</string>
  <string name="settingsMenuStripTip">Show menu with instruments at the bottom of the screen.</string>
  <string name="settingsPaletteStrip">Palette strip</string>
  <string name="settingsPaletteStripTip">Show scrollable palette at the bottom of the screen.</string>
  <string name="settingsBehaviour">Behaviour</string>
  <string name="settingsBackKeyUndo">\"Back\" key undo</string>
  <string name="settingsBackKeyUndoTip">Program will undo your last change when you click the \"back\" button once</string>
  <string name="SettingsVolumeKeys">Intercept volume buttons</string>
  <string name="SettingsVolumeKeysHint">Use the volume buttons while drawing.
    If this option is enabled, you can not control the volume while drawing,
    but you can get an access to the frequently used functions
  </string>
  <string name="settingsKeepScreenOn">Keep screen ON</string>
  <string name="settingsKeepScreenOnTip">Display will be enabled while canvas is opened. This setting will be applied after restart</string>
  <string name="settingsMaximimBrightness">Maximum brightness</string>
  <string name="settingsMaximimBrightnessTip">Screen backlight will work with maximum brightness while canvas is opened. This setting will be applied after restart</string>
  <string name="settingsSamsung">Special devices settings</string>
  <string name="fingerHovering">Detect hovering finger</string>
  <string name="fingerHoveringTip">Program will draw pointer where your finger is hovering over the screen.
    This feature works only with some Samsung phones. 
    This feature requires ROOT access.
  </string>
  <string name="useOnlySPen">Use only digital pen</string>
  <string name="settingsEinkCrear">E-ink screen cleaning</string>
  <string name="settingsEinkCrearTip">Screen will blink to black and white multipe times while cleaning drawing.
    It is needed to prevent image glitching on e-ink screens
  </string>
  <string name="settingsRotate">Rotate the canvas</string>
  <string name="settingsHorizontal">Landscape</string>
  <string name="settingsVertical">Portrait</string>
  <string name="settingsAuto">Auto</string>
  <string name="settingsOthers">Other settings</string>
  <string name="settingsOthersDeveloper">For developer</string>
  <string name="settingsOthersDeveloperDebug">Debug messages</string>
  <string name="settingsOthersDeveloperDebugTip">Display additional information on top of the program interface.</string>
  <string name="settingsOthersDeveloperResetPressure">Reset the pressure coefficient</string>
  <string name="settingsOthersDeveloperResetPressureMessage">Coefficient cleared</string>
  <string name="settingsOthersDeveloperResetPressureTip">If the mode of brush managed by strength of the pressure reacts poorly at changing the force of the pressure, try to reset the value of the control coefficient.
    If it doesn\'t help, most likely that your device hardware doesn\'t support this option
  </string>
  <string name="settingsFirstHelpTopHeader">First recommendations</string>
  <string name="settingsFirstHelpTop0">(+) Hold \"Volume +\" button for eraser</string>
  <string name="settingsFirstHelpTop1">(-) Hold \"Volume -\" button for quick access</string>
  <string name="settingsFirstHelpTop2">(+)(-) Press volume buttons together for menu</string>
  <string name="settingsFirstHelpCenter">Draw here</string>
  <string name="aboutText" tools:ignore="TypographyEllipsis">
     FP sDraw - 🗒️ is your sheet that is always at hand. A convenient tool that helps in everyday life.
     \n
     \n✨ Nothing extra - You open it and draw immediately. No ads or intrusive notifications. It has a pleasant and thoughtful design. You can quickly create a sketch, finish a photo, or create a meme.
     \n🖋️ The program supports digital pen capabilities: sPen, Smart Pen, Active Pen, etc.
     \n⛑️ While you draw, the program periodically creates backup copies to keep your drawing safe.
     \n
     \n👀 And now more details...
     \nAfter opening the program, you don\'t need to spend time creating a project - the sheet is already ready for drawing.
     \nThe program is less than a megabyte in size, works stably and quickly on most devices, and does not drain the phone with background activity. Compatible with both current Android versions and Android 2.3 😳
     \n
     \nWhen drawing, the following options are available:
     \n- ↕️ Convenient access to functions using the volume keys;
     \n- ⏳ Canceling and repeating actions, for many steps;
     \n- 💾 Saving a drawing, several options to choose from;
     \n- 📋 Inserting pictures from the gallery or from the clipboard. You can insert after removing the background;
     \n- ⚙️ Flexible settings, you can even choose the shape of the buttons 🤩
     \n- ❓ There are hints that do not distract, but will help you understand easily.
     \n- 🎁 And much more 😉
     \n
     \nIn addition to simple drawing, there are other tools:
     \n- ⬜ Eraser, for erasing what is drawn;
     \n- 🏺 Painting to fill the drawn figure;
     \n- 🧩 Mosaic to hide something in the photo;
     \n- 🅰️ Adding text, with font selection;
     \n- ✂️ Selecting and moving a fragment of a picture;
     \n- 🔳 Drawing shapes (rectangle, triangle, etc.);
     \n- 📏 Ruler, for drawing straight lines;
     \n- 🎨 Eyedropper to choose a color from the canvas;
     \n- 🖱️ Precision brush, a unique tool that allows you to easily make small changes to your drawing.
     \n
     \n
     \n☕ That\'s almost all...
     \nIn this description, it is impossible to describe the many features of the program, so it is easier to try it once than to read it 100 times 😉.
     \nJust a reminder, the program "weighs" less than a megabyte 😊
   </string>
  <string name="stringMenu">Menu</string>
</resources>